--- a/css/style.css
+++ b/css/style.css
@@ -49,7 +49,7 @@
   flex-direction: column;
   gap: 2rem;
   background-color: #f8f9fa;
-  padding: 10rem 4rem 8rem 4rem;
+  padding: 6rem 4rem 5rem 4rem;
 }
 .text > p {
   color: #111;
@@ -61,7 +61,9 @@
 /* Form */
 /* /////////////////////// */
 .form-container {
-  padding: 2rem 4rem;
+  padding: 4rem;
+  box-shadow: 0px 5px 7px rgba(0, 0, 0, 0.1);
+  z-index: 1;
 }
 
 .form-field {
@@ -74,7 +76,7 @@
 .form-field > legend {
   font-size: 2.4rem;
   font-weight: 500;
-  margin-bottom: 1rem;
+  margin-bottom: 2rem;
 }
 
 #signUp-form {
@@ -92,6 +94,7 @@
 
 .form-input {
   display: flex;
+  border: 1px solid #ced4da;
   text-align: justify;
   width: 30rem;
   height: 4rem;
@@ -104,14 +107,71 @@
   padding-bottom: 0.5rem;
 }
 
+/* /////////////////////// */
+/* Form Botton Container */
+/* /////////////////////// */
+
 .form__button-container {
   background-color: #f8f9fa;
-  padding: 2rem 4rem;
+  padding: 4rem;
 }
 
+.submit-button {
+  display: inline-block;
+  background-color: #596d48;
+  font-weight: 600;
+  color: #f8f9fa;
+  padding: 1rem 4rem;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  transition: transform 0.3s ease;
+}
+
+.submit-button:hover {
+  background-color: #47573a;
+}
+
+.form__button-container > p {
+  padding-top: 2rem;
+  color: #111;
+  font-size: 1.4rem;
+  font-weight: 500;
+}
+
+.link:link,
+.link:visited {
+  display: inline-block;
+  color: #111;
+  font-size: 1.4rem;
+  font-weight: 500;
+  transition: all 0.3s;
+}
+
+.link:hover,
+.link:active {
+  color: #6a7c5a;
+  letter-spacing: 1px;
+}
 /* 
+#596D48
 
 
+
+.input-control.success input {
+  border-color: #09c372;
+}
+
+.input-control.error input {
+  border-color: #ff3860;
+}
+
+.input-control .error {
+  color: #ff3860;
+  font-size: 9px;
+  height: 13px;
+  margin-top: 5px;
+}
 .form-container {
   grid-row: 2 / 3;
   grid-column: 2/ 3;
