--- a/css/style.css
+++ b/css/style.css
@@ -111,7 +111,8 @@
 } */
 .form-group > label {
   font-size: 1.2rem;
-  font-weight: 500;
+  letter-spacing: 2px;
+  font-weight: 600;
   padding-bottom: 0.5rem;
 }
 
