--- a/css/style.css
+++ b/css/style.css
@@ -94,7 +94,7 @@
 
 .form-input {
   display: flex;
-  border: 1px solid #e5e7eb;
+  border: 1px solid #ced4da;
   text-align: justify;
   width: 30rem;
   height: 4rem;
@@ -110,7 +110,7 @@
   border: 2px solid #ff3860;
 } */
 .form-group > label {
-  font-size: 1.2rem;
+  font-size: 1.4rem;
   letter-spacing: 2px;
   font-weight: 600;
   padding-bottom: 0.5rem;
