--- a/css/general.css
+++ b/css/general.css
@@ -86,7 +86,8 @@ a {
 }
 
 ul,
-ol {
+ol,
+legend {
   list-style: none;
 }
 
@@ -97,10 +98,10 @@ ol {
   height: 100vh;
   display: grid;
   grid-template-columns: 3.5fr 6.5fr;
-  grid-template-rows: 3.5fr 3fr 3.5fr;
+  /* grid-template-rows: 3.5fr 3fr 3.5fr; */
 }
 
-.aside {
+/* .aside {
   grid-row: 1 / 4;
   grid-column: 1 / 2;
 }
@@ -118,7 +119,7 @@ ol {
 .form__button-container {
   grid-row: 3/ 4;
   grid-column: 2/ 3;
-}
+} */
 
 /* /////////////////////// */
 /* GANERAL CSS */
