--- a/css/style.css
+++ b/css/style.css
@@ -173,23 +173,9 @@
 /* 
 #596D48
 
+#09c372;
 
+#ff3860;
 
-.input-control.success input {
-  border-color: #09c372;
-}
-
-.input-control.error input {
-  border-color: #ff3860;
-}
-
-.input-control .error {
-  color: #ff3860;
-  font-size: 9px;
-  height: 13px;
-  margin-top: 5px;
-}
-.form-container {
-  grid-row: 2 / 3;
-  grid-column: 2/ 3;
-} */
+#ff3860;
+*/
